  use a query cache to increase response times of
  oft-used queries
 

RELEASE NOTES v 2.10

* NBAVTWO-456 Missing type status no longer causes
  warning during import of specimen data sources
  
* NBAVTWO-462 Fixed awkward feature where you could
  not query date fields in the format in which they
  are presented
  
* NBAVTWO-465 Values for field scientificNameGroup
  now always lower case
  
* NBAVTWO-472 Values for field numberOfSpecimen will
  now be null in case of missing data (not 0)


RELEASE NOTES v 2.9

* NBAVTWO-121 Date strings in queir condition now
  more strictly checked
  
* NBAVTWO-374 System classification no longer set
  for specimens and multimedia
  
* NBAVTWO-446 Fixed bug where dynamic DwCA download
  crash when printing longitude values
  
* NBAVTWO-447 Fixed bug with strangely formatted
  dates in DwCA download
  
* NBAVTWO-450 "fields" property of QuerySpec now
  ignored by DwCA module
  
* NBAVTWO-451 Java client up-to-date again and
  provided with unit tests.
  


RELEASE NOTES v 2.8

* NBAVTWO-20 Field export organization for vernacular
  names now set
  
* NBAVTWO-282 DwCA download - synonyms now part of
  taxa.txt in stead of being written to separate file
  
* NBAVTWO-431 Field subgenus now set for CRS multimedia

* NBAVTWO-434 Field subgenus now set for CoL taxa

* NBAVTWO-442 DwCA download - better error reporting;
  if anything goes wrong AFTER downloading has started
  a file named __ERROR__.txt will be put into the DwCA
  zip file, containing a Java stacktrace.
  
* NBAVTWO-444 Fixed issue where simultaneious DwCA
  downloads caused corrupt DwCA files.


RELEASE NOTES v 2.7

* NBAVTWO-159 There is a new quartet of operators:
  STARTS_WITH, NOT_STARTS_WITH, STARTS_WITH_IC,
  NOT_STARTS_WITH_IC
  
* NBAVTWO-242 Imporved date handling

* NBAVTWO-282 DwCA taxon download: taxa and synonyms
  now in one file (Taxa.txt)
  
* NBAVTWO-311 There now is a REST service displaying
  all available REST services
  